--- a/src/components/video_item/video_item.module.css
+++ b/src/components/video_item/video_item.module.css
@@ -15,7 +15,8 @@
   height: 100%;
   display: flex;
   align-items: center;
-  border: 1px solid lightgray;
+  border: 1px solid rgb(222, 222, 222);
+  border-radius: 6px;
   box-shadow: 3px 3px 5px 0px rgba(191, 191, 191, 0.53);
   cursor: pointer;
   transition: transform 250ms ease-in;
@@ -34,12 +35,18 @@
   margin-left: 0.2em;
 }
 
+.title {
+  font-size: 0.9rem;
+  font-weight: 500;
+}
+
 .title,
 .channel {
   margin: 0;
-  font-size: 0.8rem;
+  padding: 0.3em;
 }
 
 .channel {
-  font-size: 0.6rem;
+  font-size: 0.8rem;
+  color: rgb(53, 53, 53);
 }
