--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,17 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Roboto', 'Noto Sans KR', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: 'Roboto', 'Noto Sans KR', sans-serif;
 }
 
 * {
   box-sizing: border-box;
+  font-family: 'Roboto', 'Noto Sans KR', sans-serif;
 }
 
 *:focus {
@@ -23,4 +21,11 @@ code {
 #root {
   display: flex;
   justify-content: center;
+}
+
+h1,
+h2,
+h3 {
+  margin: 0;
+  padding: 0;
 }
